--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,15 @@
-html,
+
+
+html {
+  background-color: #6772e5;
+  font-size: 16px;
+  font-family: Roboto, Open Sans, Segoe UI, sans-serif;
+  font-weight: 500;
+  font-style: normal;
+  text-rendering: optimizeLegibility;
+  height: 100%;
+}
+
 body {
   padding: 0;
   margin: 0;
@@ -10,7 +21,21 @@ a {
   color: inherit;
   text-decoration: none;
 }
+input,
+button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  outline: none;
+  border-style: none;
+}
 
 * {
   box-sizing: border-box;
+}
+#root {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
