--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,7 @@
 
-
+ /* #6772e5 */
 html {
-  background-color: #6772e5;
+  background-color:#6772e5;
   font-size: 16px;
   font-family: Roboto, Open Sans, Segoe UI, sans-serif;
   font-weight: 500;
